# neompy

./: .gitignore  .glic  .pre-commit-config.yaml  .pylintrc  .pylintrc-tests  LICENSE  MANIFEST.in  README.md  apps.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.py  tests.py
.github/workflows/: neom-tests.yaml
docs/: conf.py  ddd.rst  index.rst
neom/: __init__.py  apps.py
neom/core/: ioc.py  utils.py
neom/ddd/: shared.py  staff.py
neom/ddd/shared/: __init__.py  bypass.py  entity.py  exceptions.py  stuff.py  value_object.py  value_object_support.py
neom/kit/md2/forms/: fields.py  models.py  widgets.py
neom/kit/md2/templatetags/: _icons.py  _icons.raw  neom_md2.py
neom/kit/md2/views/generic/: edit.py
neom/kit/template/: library.py
neom/lib/: enum.py
neom/management/commands/: autoformat.py  cc-complexity.py  check-complexity.py  coverage.py  db-populate.py  db-reset.py  lint.py  validate-coverage.py
neom/new_ddd/: shared.py  staff.py
neom/new_ddd/shared_/: abstract_specification.py  and_specification.py  bypass.py  entity.py  entity_support.py  exceptions.py  identity.py  not_specification.py  or_specification.py  specification.py  stuff.py  value_object.py  value_object_support.py
neom/templates/neom/kit/: neo.css
neom/templates/neom/kit/md2/: web.css  web.js
neom/templates/neom/kit/md2/forms/: md2.html
neom/templatetags/: neom.py  neom_webtools.py
tests/: and_specification_tests.py  apps_tests.py  bypass_tests.py  entity_support_tests.py  entity_tests.py  ioc_tests.py  kit_md2_tests.py  kit_settings.py  method_specification_tests.py  neomtags_tests.py  not_specification_tests.py  old_entity_tests.py  operator_specification_tests.py  or_specification_tests.py  settings.py  staff_tests.py  stuff_tests.py  value_object_support_tests.py  value_object_tests.py  webtools_tests.py
tests/spec_common/: false_spec.py  true_spec.py
upy/: __init__.py  apps.py
upy/core/: ioc.py
upy/ddd/: shared.py  staff.py
upy/templatetags/: upy.py
(+2 files in other folders)
