# Copyright Neomadas, Inc. All rights reserved.

[metadata]
name = neompy-et
version = 0.0.17
description = Development tools for neomadas projects.
description_file = README.rst
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/neomadas/neompy/
author = Sinek Dev Team
author_email = sinek-dev@unknown.pe
license = BSD 3-Clause License
classifiers =
  Environment :: Web Environment
  Framework :: Django
  Framework :: Django :: 3.2
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Topic :: Internet :: WWW/HTTP
  Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
  coverage == 6.3.2
  Sphinx == 5.1.1
  typing_extensions == 4.4.0
  nomos @ git+https://github.com/gcca/nomos.git#egg=nomos
