[metadata]
name = neom
version = 0.1
description = Development tools for neomadas projects.
long_description = file: README.rst
url = https://www.neompy.com/
author = Sinek Dev Team
author_email = sinek-dev@unknown.pe
license = BSD-3-Clause
classifiers =
  Environment :: Web Environment
  Framework :: Django
  Framework :: Django :: 3.2
  Intended Audience :: Developers
  License :: OSI Approved :: BSD License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.8
  Topic :: Internet :: WWW/HTTP
  Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
  Django >= 3.2
  autopep8 == 1.5.7
